<resources>
    <string name="app_name">Inventaire Materiel</string>
    <string name="reassort">Réassort du matériel</string>
    <string name="nouveau">Nouveau</string>
    <string name="admin">Administration</string>
    <string name="nomp">Nom Prénom</string>
    <string name="dateP">Date du poste</string>
    <string name="dateJ">Date du jour</string>
    <string name="valide">Valider</string>
    <string name="terminer">Terminer</string>
    <string name="mat">Matériel utilisé</string>
    <string name="quant">Quantité</string>
    <string name="nouvMat">Nouveau Matériel</string>
    <string name="info">Attention : Enregistre le matériel actuel</string>
    <string name="infos">Le matériel utilisé à été enregistré. Pour modifier, effectuez la démarche de nouveau, la modification sera interne</string>
    <string name="fin">Valider et revenir à la page d\'accueil</string>
    <string name="modif">Modifier</string>
    <string name="actu">Actualiser</string>
    <string name="explication">Cliquez sur le produit à modifier et entrez la quantité à ajouter /supprimer (0 pour  supprimer le matériel de la liste)</string>
    <string name="connexion">Connexion</string>
    <string name="id">Identifiant</string>
    <string name="mdp">Mot de passe</string>
    <string name="annuler">Annuler</string>
    <string name="ajouter">Ajouter</string>
    <string name="soustraire">Enlever</string>

<!--    Description-->
    <string name="descImage">Logo pôle matériel</string>

</resources>